Fix input on iOS

--- a/src/assets/styles/components/_dropdown.scss
+++ b/src/assets/styles/components/_dropdown.scss
@@ -29,6 +29,7 @@
     &-item {
         display: flex;
         gap: 10px;
+        color: #404A5A;
         line-height: calc(21/14)*1em;
     }
 }
